# faction-sim

./: .gitignore  Cargo.toml  DIRECTOR_IMPLEMENTATION_PROMPTS.md  README.md  claude.md  learning_system_prompts.md  tuning.toml
crates/director/: CLAUDE.md  Cargo.toml
crates/director/src/: commentary.rs  config.rs  focus.rs  lib.rs  output.rs  scorer.rs  threads.rs
crates/director/tests/: integration_tests.rs
crates/director/tests/fixtures/: sample_state.json  sample_tensions.json
crates/sim-core/: CLAUDE.md  Cargo.toml
crates/sim-core/src/: agent.rs  config.rs  faction.rs  lib.rs  main.rs  world.rs
crates/sim-core/src/actions/: faction.rs  mod.rs  resource.rs  social.rs
crates/sim-core/src/components/: faction.rs  mod.rs  social.rs  world.rs
crates/sim-core/src/events/: drama.rs  logger.rs  types.rs
crates/sim-core/src/interventions/: mod.rs
crates/sim-core/src/output/: schemas.rs  snapshot.rs  stats.rs
crates/sim-core/src/setup/: factions.rs  mod.rs
crates/sim-core/src/systems/: memory.rs  mod.rs  needs.rs  ritual.rs  tension.rs  trust.rs
crates/sim-core/src/systems/action/: execute.rs  generate.rs  mod.rs  utility.rs  weight.rs
crates/sim-events/: CLAUDE.md  Cargo.toml
crates/sim-events/src/: event.rs  fixtures.rs  lib.rs  snapshot.rs  tension.rs  timestamp.rs
crates/sim-events/tests/fixtures/: sample_events.jsonl
crates/viz/: CLAUDE.md  Cargo.toml
crates/viz/src/: agents.rs  camera.rs  debug.rs  director_runner.rs  director_state.rs  intervention.rs  lib.rs  live_commentary.rs  main.rs  overlay.rs  plugin.rs  sim_runner.rs  state_loader.rs  world.rs
crates/viz/tests/: MANUAL_TEST_CHECKLIST.md  integration.rs
crates/viz/tests/fixtures/: sample_camera_script.json  sample_commentary.json
docs/: emergent_sim_design.md
docs/design/: agent_behavioral_rules.md  director_ai_design.md  implementation_prompts.md  simulation_output_schemas.md  visualization_design.md
prompt-log/: 2025-12-11_implementation-phases-1-2.md  2025-12-11_implementation-phases-3-4.md  2025-12-12_phase5-continuation.md  2025-12-13_director-implementation.md  2025-12-13_monorepo_restructure.md  2025-12-13_phase10-polish.md  2025-12-13_phase9-actions.md  2025-12-13_sim-events-prompt1-timestamps.md  2025-12-13_simulation-output-summary.md  2025-12-14_director-viz-integration.md  2025-12-14_viz-implementation.md  2025-12-20_history_panel_fix.md  2025-12-20_viz-labels-and-tick-limit.md  2025-12-22_desire_based_movement.md  SIM_EVENTS_IMPLEMENTATION_PROMPTS.md  VISUALIZATION_IMPLEMENTATION_PROMPTS.md
src/: config.rs  lib.rs  main.rs
src/actions/: archive.rs  beer.rs  communication.rs  conflict.rs  mod.rs  movement.rs
src/components/: agent.rs  faction.rs  social.rs  world.rs
src/events/: mod.rs  types.rs
src/output/: mod.rs  schemas.rs  snapshot.rs  tension.rs
src/setup/: agents.rs  mod.rs  world.rs
src/systems/: consumption.rs  mod.rs  needs.rs  perception.rs
src/systems/action/: execute.rs  generate.rs  mod.rs  select.rs  weight.rs
templates/: commentary.toml
tests/: determinism.rs
