[package]
name = "emergent_sim"
version = "0.1.0"
edition = "2021"
description = "An emergent medieval simulation engine"

[dependencies]
bevy_ecs = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
