[package]
name = "sim-core"
version.workspace = true
edition.workspace = true

[dependencies]
sim-events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
